--- a/frontend/src/Styles/main.css
+++ b/frontend/src/Styles/main.css
@@ -53,7 +53,7 @@ button, a {
 }
 
 body:not(.dark) .text-shadow-light {
-  text-shadow: 2px 2px 6px white; /* h-offset, v-offset, blur, color */
+  text-shadow: 2px 2px 6px white;
 }
 
 body:not(.dark) .text-shadow-light-sm {
